--- a/index.html
+++ b/index.html
@@ -635,6 +635,48 @@
                     </div>
                 </div>
             </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-7">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-7')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 7: More Spreadsheets
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">VLOOKUP</div>
+                        <div class="vocab-definition">Vertical Lookup - searches for a value in the first column of a table and returns a value in the same row from another column. Like a phone book: find the name, get the number!</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">IF Statement</div>
+                        <div class="vocab-definition">A function that makes decisions. Tests if something is true or false, then does different things based on the result. Format: =IF(test, do_if_true, do_if_false)</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">ROUND Function</div>
+                        <div class="vocab-definition">Rounds a number to a specified number of digits. =ROUND(3.14159, 2) gives you 3.14. Perfect for making messy numbers clean!</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-8">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-8')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 8: Spreadsheet Project
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Absolute Reference</div>
+                        <div class="vocab-definition">A cell reference that doesn't change when copied. Uses $ signs like $A$1. Think of it as "locking" a cell address so it always points to the same spot, like a GPS coordinate!</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Relative Reference</div>
+                        <div class="vocab-definition">A cell reference that changes when copied. Like A1 (no $ signs). It adjusts based on where you paste it, like giving directions from "your current location"</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Fill Down</div>
+                        <div class="vocab-definition">Copying a formula to multiple cells below. Select the cell with your formula, then drag down or copy-paste to apply the same formula to a whole column. Super time-saver!</div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="resources">
