--- a/index.html
+++ b/index.html
@@ -489,20 +489,22 @@
             </div>
 
             <!-- Day 9 -->
-            <div class="day-card upcoming">
+            <div class="day-card completed">
                 <div class="day-number">Day 9</div>
-                <h3 class="day-title">Python: Lists & Projects</h3>
+                <h3 class="day-title">Python Basics</h3>
                 <div class="day-topics">
                     <ul>
-                        <li>Lists and data structures</li>
-                        <li>File handling</li>
-                        <li>Mini projects</li>
-                        <li>Debugging with AI</li>
+                        <li>Introduction to programming</li>
+                        <li>Variables and data types</li>
+                        <li>Print statements and input</li>
+                        <li>Basic math operations</li>
+                        <li>Comments and strings</li>
                     </ul>
                 </div>
                 <div class="materials-section">
                     <p class="materials-title">Materials:</p>
-                    <span style="color: #999;">Not yet available</span>
+                    <a href="day 9/day9_slides.html" class="material-link">Interactive Slides</a>
+                    <a href="https://www.online-python.com/" class="material-link secondary" target="_blank">Practice Platform</a>
                 </div>
             </div>
         </div>
@@ -674,6 +676,39 @@
                     <div class="vocab-term-item">
                         <div class="vocab-term">Fill Down</div>
                         <div class="vocab-definition">Copying a formula to multiple cells below. Select the cell with your formula, then drag down or copy-paste to apply the same formula to a whole column. Super time-saver!</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-9">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-9')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 9: Python Basics
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">print()</div>
+                        <div class="vocab-definition">Makes the computer show text on the screen - like posting a message!</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Variable</div>
+                        <div class="vocab-definition">A container that stores information - like a labeled box for your stuff</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">String</div>
+                        <div class="vocab-definition">Text in quotes - like a text message you send to friends</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Integer</div>
+                        <div class="vocab-definition">A whole number with no decimals - like your age or score in a game</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Float</div>
+                        <div class="vocab-definition">A number with decimals - like your GPA, height, or the price of something</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Comment</div>
+                        <div class="vocab-definition">Notes in your code that the computer ignores - like writing notes in the margins of a textbook</div>
                     </div>
                 </div>
             </div>
