--- a/index.html
+++ b/index.html
@@ -507,6 +507,25 @@
                     <a href="https://www.online-python.com/" class="material-link secondary" target="_blank">Practice Platform</a>
                 </div>
             </div>
+            <!-- Day 10 -->
+            <div class="day-card completed">
+                <div class="day-number">Day 10</div>
+                <h3 class="day-title">Python Decisions & Logic</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>If, elif, else statements</li>
+                        <li>Comparison operators</li>
+                        <li>Boolean values</li>
+                        <li>Logical operators (and, or, not)</li>
+                        <li>Building interactive programs</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <a href="day 10/day10_slides.html" class="material-link">Interactive Slides</a>
+                    <a href="https://www.online-python.com/" class="material-link secondary" target="_blank">Practice Platform</a>
+                </div>
+            </div>
         </div>
 
         <div class="vocabulary">
@@ -709,6 +728,38 @@
                     <div class="vocab-term-item">
                         <div class="vocab-term">Comment</div>
                         <div class="vocab-definition">Notes in your code that the computer ignores - like writing notes in the margins of a textbook</div>
+                    </div>
+                </div>
+            </div>
+            <div class="vocab-day collapsed" id="vocab-day-10">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-10')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 10: Python Decisions & Logic
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">if statement</div>
+                        <div class="vocab-definition">Code that only runs when something is True - like "if it's raining, bring umbrella"</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Condition</div>
+                        <div class="vocab-definition">A test that results in True or False - like checking if your phone battery > 20%</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Boolean</div>
+                        <div class="vocab-definition">A value that's either True or False - like a light switch (on/off)</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Comparison Operator</div>
+                        <div class="vocab-definition">Symbols that compare values: == (equals), > (greater), < (less), etc.</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">elif (else if)</div>
+                        <div class="vocab-definition">Another condition to check if the first one was False</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Logical Operator</div>
+                        <div class="vocab-definition">Combines conditions using and, or, not - like "if hungry AND have money, buy food"</div>
                     </div>
                 </div>
             </div>
