--- a/day 10/day10_slides.html
+++ b/day 10/day10_slides.html
@@ -335,7 +335,7 @@
 </head>
 <body>
     <div class="slide-container">
-        <div class="slide-number">Slide <span id="slideNumber">1</span> of 20</div>
+        <div class="slide-number">Slide <span id="slideNumber">1</span> of 22</div>
 
         <!-- Slide 1: Title -->
         <div class="slide active">
@@ -402,7 +402,57 @@ print(message)</div>
             <div class="vocab-def">Another condition to check if the first one was False</div>
         </div>
 
-        <!-- Slide 5: Your First If Statement -->
+        <!-- Slide 5: Programming Languages Evolve -->
+        <div class="slide">
+            <h1>Programming Languages Evolve! 🚀</h1>
+            <p>Just like smartphones get updates, programming languages constantly improve:</p>
+
+            <h3>Why Languages Change:</h3>
+            <ul>
+                <li>🐛 <strong>Fix Problems:</strong> Remove bugs and confusing features</li>
+                <li>⚡ <strong>Add Speed:</strong> Make programs run faster</li>
+                <li>🆕 <strong>New Features:</strong> Add tools developers need</li>
+                <li>🔒 <strong>Security:</strong> Fix vulnerabilities and make code safer</li>
+                <li>📱 <strong>Stay Modern:</strong> Keep up with new technology</li>
+            </ul>
+
+            <div class="fun-fact">
+                <strong>Fun Fact:</strong> The C programming language was created in 1972 and is STILL being updated today - over 50 years later! The latest version came out in 2018.
+            </div>
+
+            <div class="activity-box">
+                <p><strong>Think About It:</strong> Your phone gets updates - why shouldn't programming languages?</p>
+            </div>
+        </div>
+
+        <!-- Slide 6: Python's Evolution Story -->
+        <div class="slide">
+            <h1>Python's Amazing Journey! 🐍</h1>
+
+            <h3>🎄 1989: Christmas Hobby Project</h3>
+            <p>Guido van Rossum started Python during Christmas break - just for fun!</p>
+
+            <h3>📅 Major Milestones:</h3>
+            <ul>
+                <li><strong>1991:</strong> Python 0.9 - First public release</li>
+                <li><strong>1994:</strong> Python 1.0 - First official version</li>
+                <li><strong>2000:</strong> Python 2.0 - Added list comprehensions</li>
+                <li><strong>2008:</strong> Python 3.0 - HUGE update! (broke old code)</li>
+                <li><strong>2024:</strong> Python 3.12 - Current version (super fast!)</li>
+            </ul>
+
+            <div class="code-block"># Python 2 (old way)
+print "Hello World"    # No parentheses!
+
+# Python 3 (current way)
+print("Hello World")   # Parentheses required!</div>
+
+            <div class="fun-fact">
+                <strong>Cool Fact:</strong> Python 3 was so different from Python 2 that old programs needed to be rewritten! But it made Python much better and easier to learn.
+            </div>
+        </div>
+
+        <!-- Slide 7: Your First If Statement -->
         <div class="slide">
             <h1>Your First If Statement! 🚦</h1>
             <p>If statements let your code make decisions:</p>
