--- a/day 10/day10_slides.html
+++ b/day 10/day10_slides.html
@@ -335,7 +335,7 @@
 </head>
 <body>
     <div class="slide-container">
-        <div class="slide-number">Slide <span id="slideNumber">1</span> of 22</div>
+        <div class="slide-number">Slide <span id="slideNumber">1</span> of 24</div>
 
         <!-- Slide 1: Title -->
         <div class="slide active">
@@ -452,7 +452,66 @@ print("Hello World")   # Parentheses required!</div>
             </div>
         </div>
 
-        <!-- Slide 7: Your First If Statement -->
+        <!-- Slide 7: Python Powers Your Favorite Apps! -->
+        <div class="slide">
+            <h1>Python Powers Your Favorite Apps! 📱</h1>
+
+            <h3>🌐 Social Media & Web</h3>
+            <ul>
+                <li><strong>Instagram:</strong> Built with Django (Python web framework) - 2+ billion users!</li>
+                <li><strong>Pinterest:</strong> Uses Python for recommendations and backend</li>
+                <li><strong>Reddit:</strong> Originally written entirely in Python</li>
+            </ul>
+
+            <h3>🤖 AI & Smart Features</h3>
+            <ul>
+                <li><strong>ChatGPT:</strong> Most AI code uses Python libraries like PyTorch</li>
+                <li><strong>Tesla Autopilot:</strong> Self-driving car AI trained with Python</li>
+                <li><strong>Netflix & YouTube:</strong> Recommendation algorithms written in Python</li>
+            </ul>
+
+            <h3>🎮 Games You Play</h3>
+            <ul>
+                <li><strong>Eve Online:</strong> Massive multiplayer game uses Python servers</li>
+                <li><strong>Battlefield 2:</strong> Game logic scripted in Python</li>
+            </ul>
+
+            <div class="activity-box">
+                <p><strong>Mind Blown Yet?</strong> Every time you scroll Instagram or get a Netflix recommendation, Python is working behind the scenes!</p>
+            </div>
+        </div>
+
+        <!-- Slide 8: Python in Science & Beyond! -->
+        <div class="slide">
+            <h1>Python in Science & Beyond! 🚀</h1>
+
+            <h3>🧪 Science & Discovery</h3>
+            <ul>
+                <li><strong>NASA:</strong> Analyzes space mission data and controls rovers on Mars!</li>
+                <li><strong>Large Hadron Collider:</strong> Scientists use Python to discover new particles</li>
+                <li><strong>Medical Research:</strong> DNA sequencing and analyzing medical images</li>
+            </ul>
+
+            <h3>📊 Data & Finance</h3>
+            <ul>
+                <li><strong>Stock Trading:</strong> Wall Street uses Python to analyze market trends</li>
+                <li><strong>Spotify:</strong> Analyzes your music taste to create perfect playlists</li>
+                <li><strong>Automation:</strong> Python bots can do boring tasks for you!</li>
+            </ul>
+
+            <div class="code-block"># Simple automation example
+import os
+for filename in os.listdir():
+    if filename.endswith('.txt'):
+        print(f"Found text file: {filename}")
+        # Could rename, move, or process the file!</div>
+
+            <div class="fun-fact">
+                <strong>Career Fact:</strong> Python developers make an average of $100,000+ per year because the language is so versatile and in-demand!
+            </div>
+        </div>
+
+        <!-- Slide 9: Your First If Statement -->
         <div class="slide">
             <h1>Your First If Statement! 🚦</h1>
             <p>If statements let your code make decisions:</p>
