--- a/index.html
+++ b/index.html
@@ -526,6 +526,26 @@
                     <a href="https://www.online-python.com/" class="material-link secondary" target="_blank">Practice Platform</a>
                 </div>
             </div>
+
+            <!-- Day 11 -->
+            <div class="day-card completed">
+                <div class="day-number">Day 11</div>
+                <h3 class="day-title">Python Loops, Lists & Functions</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>Python review</li>
+                        <li>For and while loops</li>
+                        <li>Lists and list operations</li>
+                        <li>Functions and return values</li>
+                        <li>Combining concepts</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <a href="day 11/day11_slides.html" class="material-link">Interactive Slides</a>
+                    <a href="https://www.online-python.com/" class="material-link secondary" target="_blank">Practice Platform</a>
+                </div>
+            </div>
         </div>
 
         <div class="vocabulary">
@@ -760,6 +780,39 @@
                     <div class="vocab-term-item">
                         <div class="vocab-term">Logical Operator</div>
                         <div class="vocab-definition">Combines conditions using and, or, not - like "if hungry AND have money, buy food"</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-11">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-11')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 11: Python Loops, Lists & Functions
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Loop</div>
+                        <div class="vocab-definition">Code that repeats automatically - like playing a song on repeat</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">List</div>
+                        <div class="vocab-definition">A container that holds multiple values - like a playlist of songs</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Function</div>
+                        <div class="vocab-definition">Reusable code with a name - like a recipe you can use over and over</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Iteration</div>
+                        <div class="vocab-definition">One cycle through a loop - like one lap around a track</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Index</div>
+                        <div class="vocab-definition">Position number in a list (starts at 0) - like seat numbers in a theater</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Return</div>
+                        <div class="vocab-definition">When a function sends back a value - like a vending machine giving you change</div>
                     </div>
                 </div>
             </div>
