--- a/index.html
+++ b/index.html
@@ -546,6 +546,24 @@
                     <a href="https://www.online-python.com/" class="material-link secondary" target="_blank">Practice Platform</a>
                 </div>
             </div>
+
+            <!-- Day 13 -->
+            <div class="day-card completed">
+                <div class="day-number">Day 13</div>
+                <h3 class="day-title">Practice Exam Questions</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>60 practice questions</li>
+                        <li>Review of Days 1-11</li>
+                        <li>Multiple choice & true/false</li>
+                        <li>Instant feedback with explanations</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <a href="day 13/day13_slides.html" class="material-link">Practice Exam</a>
+                </div>
+            </div>
         </div>
 
         <div class="vocabulary">
