--- a/index.html
+++ b/index.html
@@ -564,6 +564,25 @@
                     <a href="day 13/day13_slides.html" class="material-link">Practice Exam</a>
                 </div>
             </div>
+
+            <!-- Day 14 -->
+            <div class="day-card completed">
+                <div class="day-number">Day 14</div>
+                <h3 class="day-title">Building Your First Website with AI</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>4K Resolution & E-commerce</li>
+                        <li>Modem vs Router</li>
+                        <li>GitHub Education Benefits</li>
+                        <li>Static Websites</li>
+                        <li>GitHub Codespaces & Copilot</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <a href="day 14/day14_slides.html" class="material-link">Interactive Slides</a>
+                </div>
+            </div>
         </div>
 
         <div class="vocabulary">
@@ -831,6 +850,39 @@
                     <div class="vocab-term-item">
                         <div class="vocab-term">Return</div>
                         <div class="vocab-definition">When a function sends back a value - like a vending machine giving you change</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-14">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-14')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 14: Building Your First Website with AI
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">4K Resolution</div>
+                        <div class="vocab-definition">A display resolution of approximately 4,000 pixels wide (3840 x 2160 pixels), providing four times the detail of regular HD. Think of it like looking through no window at all - everything is super crisp!</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">E-commerce</div>
+                        <div class="vocab-definition">Electronic Commerce - Buying and selling goods or services over the internet. Every time you buy something on Amazon or sell clothes on Depop, you're doing e-commerce!</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Modem</div>
+                        <div class="vocab-definition">A device that connects your house to the internet by talking to your Internet Service Provider (ISP). It's like a water pipe bringing water to your house.</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Router</div>
+                        <div class="vocab-definition">A device that takes the internet connection from your modem and shares it with all your devices by creating a WiFi network. It's like a sprinkler system spreading water around your yard.</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Static Website</div>
+                        <div class="vocab-definition">A website where every visitor sees the exact same content. The pages are pre-built and don't change unless you edit the code. Like a printed poster - everyone sees the same thing.</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">GitHub Codespaces</div>
+                        <div class="vocab-definition">A cloud-based development environment that runs VS Code in your browser. It's like having a complete coding setup that works anywhere without installation!</div>
                     </div>
                 </div>
             </div>
