--- a/index.html
+++ b/index.html
@@ -583,6 +583,37 @@
                     <a href="day 14/day14_slides.html" class="material-link">Interactive Slides</a>
                 </div>
             </div>
+
+            <!-- Day 15 -->
+            <div class="day-card completed">
+                <div class="day-number">Day 15</div>
+                <h3 class="day-title">Exam Day</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>Exploring Computer Science Exam</li>
+                        <li>Covering Days 1-11</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Day 16 -->
+            <div class="day-card completed">
+                <div class="day-number">Day 16</div>
+                <h3 class="day-title">Building Games with AI</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>Vocab Review: 4K, E-commerce, Modem/Router</li>
+                        <li>New Terms: Bandwidth & Cache</li>
+                        <li>Typing Speed Test</li>
+                        <li>Static Sites Deep Dive</li>
+                        <li>Game Development with Codespaces</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <a href="day 16/day16_slides.html" class="material-link">Interactive Slides</a>
+                </div>
+            </div>
         </div>
 
         <div class="vocabulary">
@@ -883,6 +914,23 @@
                     <div class="vocab-term-item">
                         <div class="vocab-term">GitHub Codespaces</div>
                         <div class="vocab-definition">A cloud-based development environment that runs VS Code in your browser. It's like having a complete coding setup that works anywhere without installation!</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-16">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-16')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 16: Building Games with AI
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Bandwidth</div>
+                        <div class="vocab-definition">The maximum amount of data that can be transmitted over an internet connection in a given amount of time, usually measured in Mbps (megabits per second). Think of it like a pipe carrying water - a bigger pipe (more bandwidth) can carry more water (data) at once. High bandwidth = fast downloads and smooth streaming. Low bandwidth = buffering and slow loads.</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Cache</div>
+                        <div class="vocab-definition">A temporary storage location where your computer, phone, or browser saves copies of files, images, and data to make things load faster the next time you need them. Like keeping your favorite snacks in your backpack instead of going to the kitchen every time - your browser keeps website copies so it doesn't have to download them again!</div>
                     </div>
                 </div>
             </div>
