--- a/index.html
+++ b/index.html
@@ -614,6 +614,25 @@
                     <a href="day 16/day16_slides.html" class="material-link">Interactive Slides</a>
                 </div>
             </div>
+
+            <!-- Day 17 -->
+            <div class="day-card completed">
+                <div class="day-number">Day 17</div>
+                <h3 class="day-title">Mastering AI Prompts</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>The Dunning-Kruger Effect</li>
+                        <li>Vocab Review: Bandwidth & Cache</li>
+                        <li>New Terms: Streaming & Algorithm</li>
+                        <li>Good vs Bad AI Prompts</li>
+                        <li>Game Development Work Time</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <a href="day 17/day17_slides.html" class="material-link">Interactive Slides</a>
+                </div>
+            </div>
         </div>
 
         <div class="vocabulary">
@@ -931,6 +950,23 @@
                     <div class="vocab-term-item">
                         <div class="vocab-term">Cache</div>
                         <div class="vocab-definition">A temporary storage location where your computer, phone, or browser saves copies of files, images, and data to make things load faster the next time you need them. Like keeping your favorite snacks in your backpack instead of going to the kitchen every time - your browser keeps website copies so it doesn't have to download them again!</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-17">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-17')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 17: Mastering AI Prompts
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Streaming</div>
+                        <div class="vocab-definition">A method of transmitting or receiving data (especially video and audio) over a network as a continuous flow, allowing playback to begin while the rest is still being received. Like watching a YouTube video that starts playing right away - you don't wait for the entire video to download first. The data "streams" to you in real-time!</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Algorithm</div>
+                        <div class="vocab-definition">A step-by-step set of instructions or rules designed to solve a specific problem or perform a specific task. Think of a recipe - it's step-by-step instructions to make a cake. In computing, algorithms power everything from your social media feed (TikTok/Instagram algorithms) to Google search results to Netflix recommendations.</div>
                     </div>
                 </div>
             </div>
